Make sure only one instance of KT can run for each user (regardless of the current $DISPLAY), this fixes bug 143791.

This is implemented by a hidden lock file in the users's home directory.

BUG: 143791


svn path=/trunk/extragear/network/ktorrent/; revision=659769